# vcard_qr_generator

./: .env.example  .gitignore  LICENSE  README.md  example.csv  main.py  pyproject.toml  qr_creator.py  reader_example.py  requirements.txt  schema.py  services.py
