[project]
name = "vcard-qr-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "loguru>=0.7.3",
  "pydantic>=2.10.6",
  "python-decouple>=3.8",
  "segno>=1.6.1",
]


[dependency-groups]
dev = []


[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]


[tool.ruff]
lint.select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
]
lint.ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "B009",  # Do not call `getattr` with a constant attribute value
  "C901",  # too complex
  "E701",  # Multiple statements on one line (colon)
]

# Same as Black.
line-length = 100
