[project]
name = "vcard-qr-generator"
version = "0.3.1"
description = "QR Code Generator for Business Cards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "loguru>=0.7.3",
  "pydantic>=2.10.6",
  "segno>=1.6.1",
]


[dependency-groups]
dev = []


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
]
ignore = [
  "B009",  # Do not call `getattr` with a constant attribute value
  "E402",  # module-import-not-at-top-of-file
]
